[package]
name = "impulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
postgres-types = { version = "0.2.4", features = ["derive"] }
serde_json = "1.0.91"
uuid = "1.2.2"


[lib]
name = "impulse"
path = "src/lib.rs"

[[bin]]
name = "show_reports"
path = "src/bin/show_reports.rs"
