[package]
name = "impulse"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
async_once = "0.2.6"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
diesel = { version = "2.0.2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
docker-api = "0.12.2"
dotenvy = "0.15.6"
enum-iterator = "1.2.0"
env_logger = "0.10.0"
futures = "0.3.25"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
passwords = "3.1.12"
postgres-types = { version = "0.2.4", features = ["derive"] }
prew = "0.1.3"
regex = "1.7.1"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }


[lib]
name = "impulse"
path = "src/lib.rs"


[[bin]]
name = "impulse"
path = "src/bin/impulse.rs"
