[tool.poetry]
name = "impulse-pulumi"
version = "0.1.0"
description = ""
authors = ["dek <dek@substructure.one>"]
readme = "README.md"
packages = [{include = "impulse_pulumi"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ediri-vultr = "^2.15.1"
pulumi = "^3.78.1"
pulumi-command = "^0.8.2"
pulumi-random = "^4.13.2"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
